--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mongodb": "^3.5.4",
+    "mongoose": "^5.9.3",
     "morgan": "~1.9.0"
   }
 }
